--- a/index.html
+++ b/index.html
@@ -14,77 +14,77 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- Trivia Game Title Row 1 -->
-        <div class="row bg-light">
-            <div class="col-md-12 d-flex justify-content-center">
-                <h1>Trivia Game</h1>
-            </div>
-        </div>
-        <br><br><br>
 
-        <!-- Instruction Row 2 -->
-        <div class="row bg-light">
-            <div class="col-md-12 d-flex justify-content-center">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-12 text-center bg-light">
+                <h1>Trivia Game</h1>
                 <p>Answer each question to test your knowledge!</p>
             </div>
-            <br><br>
         </div>
-
-        <!-- Start Button Row 3 -->
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center bg-light">
-                <button type="button" class="btn btn-primary">START</button>
-            </div>
-        </div>
-
-        <!-- Timer Row 4 -->
-        <div class="row">
-            <div class="col-md-12 bg-light">
-                <div id="timer"></div>
-            </div>
-        </div>
-
-        <!-- Question Row 4 -->
-        <div class="row bg-light">
-            <div class="col-md-12">
-                <div id="currentQuestion"></div>
-            </div>
-            <div class="col-md-12">
-                <div class="question"></div>
-            </div>
-            <div class="col-md-12">
-                <div class="answerList"></div>
-            </div>
-        </div>
+        <br> <br>
 
         <div class="row">
-            <div id="messages"></div>
-
-            <div id="correctAnswers"></div>
-
-            <div id="wrongAnswers"></div>
-
-            <div id="notAnswered"></div>
-
-            <div button id="startAgainButton">
-                </button>
+                <div class="col-md-12 d-flex justify-content-center bg-light">
+                    <button type="button" class="btn btn-primary" id="startButton">START</button>
+                </div>
             </div>
+
+        <div class="panel panel-default bg-light text-center">   
+            <div class="panel-heading">
+                <div id="timer"></div> <hr>
+            </div>
+
+            <div class="panel-body">
+                    <div id="currentQuestion"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div class="question"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div class="answerList"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div id="messages"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div id="correctAnswers"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div id="wrongAnswers"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div id="notAnswered"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div button id="startAgainButton"></div>
+                    <!-- <button type="button" class="btn btn-primary" id="startAgainButton">Start Again?</button> -->
+
+            </div>
+
+            <div class="panel-body">
+                    <div id="message"></div>
+            </div>
+
+            <div class="panel-body">
+                    <div id="correctedAnswer"></div>
+            </div>
+        <!-- panel end div-->
         </div>
         <!-- <div class="row">
                 <div class="col-md-12 d-flex justify-content-center bg-light">
-                    <button type="button" class="btn btn-primary">Start Again?</button>
+                    <button type="button" class="btn btn-primary" id="startAgainButton">Start</button>
                 </div>
             </div> -->
-
-        <!--Answer Page-->
-        <div id="message">
-
-        </div>
-
-        <div id="correctedAnswer"></div>
-
-
     </div>
 
 
