--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
 
-        <div class="panel panel-default bg-light text-center">   
+        <div class="panel panel-default bg-light text-center" style= "height: 350px;">   
             <div class="panel-heading">
                 <div id="timer"></div> <hr>
             </div>
