--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button type="button" class="btn btn-primary" id="startButton">START</button>
                 </div>
             </div>
-
+<script>(function(t,e,s,n){var o,a,c;t.SMCX=t.SMCX||[],e.getElementById(n)||(o=e.getElementsByTagName(s),a=o[o.length-1],c=e.createElement(s),c.type="text/javascript",c.async=!0,c.id=n,c.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgdxc7gm1M_2FZAr15sWJkCFdDyjG6CO9hnuct6X3xOKUt8Z.js"].join(""),a.parentNode.insertBefore(c,a))})(window,document,"script","smcx-sdk");</script>
         <div class="panel panel-default bg-light text-center" style= "height: 350px;">   
             <div class="panel-heading">
                 <div id="timer"></div> <hr>
